# CKAN-rs

./: Cargo.toml
crates/ckan-rs-lib/: Cargo.toml
crates/ckan-rs-lib/src/: config.rs  easy_installer.rs  error.rs  game_instance.rs  installation.rs  installer.rs  lib.rs  manager.rs  metadb.rs  modulemanager.rs  relationship_resolver.rs
crates/ckan-rs-lib/src/game_instance/: filetracker.rs  transaction.rs
crates/ckan-rs-lib/src/installation/: content.rs  deployment.rs  download.rs
crates/ckan-rs-lib/src/installer/: acquirement.rs  content.rs  deployment.rs  download.rs  retrieval.rs
crates/ckan-rs-lib/src/installer/deployment/: hardlink_deployment.rs
crates/ckan-rs-lib/src/manager/relationship_resolver/: dependency_graph.rs
crates/ckan-rs-lib/src/metadb/: ckan.rs  generation.rs  insert-author.sql  insert-identifier.sql  insert-mod-author.sql  insert-mod-identifier.sql  insert-mod-license.sql  insert-mod-localization.sql  insert-mod-relationship.sql  insert-mod-tag.sql  insert-mod.sql  iterator.rs  metadb-schema.sql  package.rs
crates/ckan-rs-lib/src/metadb/ckan/: import.rs  install.rs  kind.rs  ksp_version.rs  mod_version.rs  relationship.rs  release.rs  sql.rs  version_bounds.rs
crates/ckan-rs-lib/src/modulemanager/: dep_graph_resolver.rs  dependency_resolver.rs  dependencyresolver.rs  depenecyresolver.rs
crates/ckan-rs-lib/src/relationship_resolver/: dependency_graph.rs  finalized_resolver.rs  package_tree.rs  processing_resolver.rs  resolver_builder.rs
crates/ckan-rs-lib/tests/: create-db.rs  full-install.rs  resolve-dependency.rs  update-db.rs
(+75 files in other folders)
