[package]
name = "ckan-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
serde = "1.0.144"
serde_json = "1.0.85"
bincode = "1.3"
jsonschema = "0.16.0"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6.3"
flate2 = "1.0.24"
tar = "0.4.38"
try_map = "0.3.1"
petgraph = { version = "0.6.2", features = ["serde-1"] } 
pathdiff = "0.2.1"

[dev-dependencies]
ckan-rs-test-utils = { path = "../ckan-rs-test-utils" }